fix overflow text

--- a/sass/common/_animate.scss
+++ b/sass/common/_animate.scss
@@ -5,9 +5,9 @@
 
 @keyframes idea_move{
     0%, 100%{ transform: translate(0, 0);}
-    25%{ transform: translate(20px, 30px);}
-    50%{ transform: translate(-30px, -40px);}
-    75%{ transform: translate(-20px, 40px);}
+    25%{ transform: translate(-20px, 30px);}
+    50%{ transform: translate(30px, -40px);}
+    75%{ transform: translate(-10px, 40px);}
 }
 
 @keyframes seek_left_move{
